Progress on theme. Added bg images and IE stylesheets.

--- a/bling_nateeanes/donation-layout.css
+++ b/bling_nateeanes/donation-layout.css
@@ -1,3 +1,10 @@
+
+/**************************************************************************************************************
+ *
+ * GENERAL (BASELINE) STYLES
+ *
+**************************************************************************************************************/
+
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video {
   margin: 0;
   padding: 0;
@@ -12,25 +19,20 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
   display: block;
 }
 
+p {
+	margin: 0 0 1em 0;
+}
+
+img {
+	max-width: 100% !important;
+}
+
 nav ul {
   list-style: none;
 }
 
 blockquote,q {
   quotes: none;
-}
-
-blockquote:before,blockquote:after,q:before,q:after {
-  content: '';
-  content: none;
-}
-
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
 }
 
 ins {
@@ -63,25 +65,9 @@ pre,code,kbd,samp {
   font-family: monospace, sans-serif;
 }
 
-/*
- * BASELINE STYLES
- */
 /* always force a scrollbar in non-IE */
 html {
   overflow-y: scroll;
-}
-
-/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
-a:hover,a:active {
-  outline: none;
-  cursor: pointer;
-}
-
-.close a,.close a:active,.close a:visited {
-  color: #848484 !important;
-  text-decoration: none;
-  font-weight: 400 !important;
-  border-bottom: 1px dotted;
 }
 
 ul,ol {
@@ -97,27 +83,11 @@ nav ul,nav li {
   margin: 0;
 }
 
-small {
-  font-size: 85%;
-}
-
-strong,th {
-  font-weight: 700;
-}
-
 td,td img {
   vertical-align: top;
 }
 
-sub {
-  vertical-align: sub;
-  font-size: smaller;
-}
 
-sup {
-  vertical-align: super;
-  font-size: smaller;
-}
 
 pre {
   padding: 15px;
@@ -131,12 +101,141 @@ pre {
 /* IE */
 }
 
-textarea {
-  overflow: auto;
+/**************************************************************************************************************
+ *
+ * TEXT ELEMENTS & LINKS
+ *
+**************************************************************************************************************/
+
+/* Headers */
+
+h1, h2, h3, h4 {
+	margin: 0.25em 0 0.5em 0;
+	line-height: 120%;
+}
+
+h1 {
+	font-size: 1.75em;
+}
+
+h2 {
+	font-size: 1.2em;
+}
+
+/* Body text */
+
+sub {
+  vertical-align: sub;
+  font-size: smaller;
+}
+
+sup {
+  vertical-align: super;
+  font-size: smaller;
+}
+
+small {
+  font-size: 85%;
+}
+
+strong,th {
+  font-weight: 700;
+}
+
+/* Links */
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+.gridwrap a {
+	color: #d06500;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
+a:hover,a:active {
+  outline: none;
+  cursor: pointer;
+}
+
+.close a,.close a:active,.close a:visited {
+  color: #848484 !important;
+  text-decoration: none;
+  font-weight: 400 !important;
+  border-bottom: 1px dotted;
+}
+
+/*  iOS highlight color */
+a:link {
+  -webkit-tap-highlight-color: #FF5E99;
+}
+
+/**************************************************************************************************************
+ *
+ * FORM ELEMENTS
+ *
+**************************************************************************************************************/
+
+fieldset {
+	border: none;
+	margin: 0 0 2.5em 0;
+	padding: 0.5em 0 0 0;
+	max-width: 100% !important;
+}
+
+fieldset fieldset {
+	margin-bottom: 0;
+}
+
+legend {
+	font-weight: bold;
+	font-size: 1.3333em;
 }
 
 .ie6 legend,.ie7 legend {
   margin-left: -7px;
+}
+
+.webform-container-inline label,
+.webform-container-inline input.form-text,
+.webform-container-inline select {
+	display: block;
+}
+
+.form-item,
+.expiration-date-wrapper {
+	margin: 0 0 0.75em 0;
+	clear: both;
+	max-width: 275px;
+}
+
+label {
+	font-weight: normal;
+}
+
+label.error {
+	float: right !important;
+	max-width: 60%;
+}
+
+input[type=text],
+input.form-text {
+	padding: 0.3333em 1%;
+	max-width: 97%;
+}
+
+select {
+	max-width: 90%;
+}
+
+textarea {
+  overflow: auto;
 }
 
 /* align checkboxes, radios, text inputs with their label */
@@ -154,6 +253,21 @@ input[type=checkbox] {
 
 .ie6 input {
   vertical-align: text-bottom;
+}
+
+.description {
+	color: #888;
+	clear: both;
+}
+
+input.form-submit {
+	background: url(img/bg-button.jpg) right center no-repeat;
+	border: 1px solid #fdc72f;
+	box-shadow: inset 1px 1px 0 rgba(255, 255, 255, 0.6);
+	font-size: 1.25em;
+	letter-spacing: -1px;
+	text-transform: uppercase;
+	padding: 10px 60px 10px 10px;
 }
 
 /* hand cursor on clickable input elements */
@@ -192,11 +306,6 @@ input:invalid,textarea:invalid {
   text-shadow: none;
 }
 
-/*  iOS highlight color */
-a:link {
-  -webkit-tap-highlight-color: #FF5E99;
-}
-
 /* make buttons play nice in IE:
    www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
 button {
@@ -209,9 +318,51 @@ button {
   -ms-interpolation-mode: bicubic;
 }
 
-/*
- * Helpers
- */
+/* Donation Webform */
+
+.webform-client-form {
+	margin-bottom: 18em;
+}
+
+#webform-component-billing-information .form-item.webform-component,
+#edit-submitted-billing-information-payment-fields-credit .form-item,
+.expiration-date-wrapper { 
+	min-height: 34px;
+}
+
+.form-item-submitted-billing-information-payment-fields-credit-card-cvv .description {
+	display: inline-block;
+	clear: none;
+	margin-top: 0 !important;
+}
+
+.form-item-submitted-billing-information-payment-fields-credit-card-cvv .description a {
+	background: url(img/icon-questionmark.jpg) left center no-repeat;
+	margin-left: 5px;
+	padding: 4px 0 4px 24px;
+	display: inline-block;
+}
+
+.fundraiser_submit_message {
+	color: #888;
+	text-align: left;
+}
+
+.fundraiser_submit_message p {
+	max-width: 270px;
+}
+
+.fundraiser_submit_message img {
+	float: left;
+	margin-right: 10px;
+}
+
+/***************************************************************************************************************
+ *
+ * HELPERS (INCL. CLEARFIX, ETC.)
+ *
+***************************************************************************************************************/
+
 /* for image replacement */
 .ir {
   display: block;
@@ -253,17 +404,29 @@ button {
   zoom: 1;
 }
 
-/* Primary Styles
- *  Author: Luke Connolly
- */
+blockquote:before,blockquote:after,q:before,q:after {
+  content: '';
+  content: none;
+}
+
+/***************************************************************************************************************
+ *
+ * PRIMARY STYLES & GRID ELEMENTS
+ * Author: Luke Connolly
+ *
+***************************************************************************************************************/
+
 /*###########
 12 Column Grid at 978px with 30px gutters */
-.gridwrap {
-  max-width: 948px;
+.gridwrap,
+.container.close {
+	max-width: 945px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+}
+
+.gridwrap .inner {
+	margin: 0 13px;
 }
 
 .grid-color {
@@ -275,145 +438,109 @@ button {
 }
 
 .grid-1,.grid-2,.grid-3,.grid-4,.grid-5,.grid-6,.grid-7,.grid-8,.grid-9,.grid-10,.grid-11,.grid-12 {
-  margin-left: 15px;
-  margin-right: 15px;
+  padding: 0 7px;
   float: left;
   overflow: hidden;
-  margin-top: 30px;
+  margin-top: 15px;
+  box-sizing: border-box;
 }
 
-.grid-1 {
-  width: 49px;
-}
+/* Grid elements */
 
-.grid-2 {
-  width: 128px;
-}
-
-.grid-3 {
-  width: 207px;
-}
-
-.grid-4 {
-  width: 286px;
-}
-
+.grid-1,
+.grid-2,
+.grid-3,
+.grid-4,
+.grid-4,
 .grid-5 {
-  width: 365px;
+	width: 50%;
 }
 
-.grid-6 {
-  width: 444px;
-}
-
-.grid-7 {
-  width: 523px;
-}
-
-.grid-8 {
-  width: 602px;
-}
-
-.grid-9 {
-  width: 681px;
-}
-
-.grid-10 {
-  width: 760px;
-}
-
-.grid-11 {
-  width: 839px;
-}
-
+.grid-6,
+.grid-7,
+.grid-8,
+.grid-9,
+.grid-10,
+.grid-11,
 .grid-12 {
-  width: 918px;
+  width: 100%;
 }
 
-.left-1 {
-  margin-left: 94px;
+.first {
+	padding-left: 0;
 }
 
-.left-2 {
-  margin-left: 173px;
+.last {
+	padding-right: 0;
 }
 
-.left-3 {
-  margin-left: 252px;
-}
-
-.left-4 {
-  margin-left: 331px;
-}
-
-.left-5 {
-  margin-left: 410px;
-}
-
-.left-6 {
-  margin-left: 489px;
-}
-
-.left-7 {
-  margin-left: 568px;
-}
-
-.left-8 {
-  margin-left: 647px;
-}
-
-.left-9 {
-  margin-left: 726px;
-}
-
-.left-10 {
-  margin-left: 805px;
-}
-
-/*###########
-Typography */
 
 
+/**************************************************************************************************************
+ *
+ * PAGE ELEMENT STYLES
+ *
+**************************************************************************************************************/
 
-/*#########
-Main Styles */
+/* Body */
+
 body {
-  background-image: url(/sites/all/themes/bling/img/body-bg.gif);
-  background-position: initial;
-  background-repeat: repeat;
+  background: url(/sites/all/themes/candidate_themes/bling_nateeanes/img/body-bg.gif) center center repeat;
+  font: 12px 'Helvetica', 'Arial', sans-serif;
+  line-height: 150%;
 }
 
-.content {
-  background-color: #fff;
-}
+/* Page Header */
 
 .head {
   background-color: #f5f5f5;
+  padding-bottom: 20px;
 }
+
+#logo-top {
+	display: block;
+	float: left;
+	margin: 15px 0 0 0;
+	max-width: 45%;
+}
+
+#header_right {
+	padding-top: 10px;
+	font-size: 0.9166666em;
+	color: #666;
+	float: right;
+}
+
+#donation-message {
+	border-top: 1px dotted #bbb;
+	padding-top: 0.5em;
+	padding-left: 0;
+}
+
+/* Content Area & Sidebars */
+
+.gridwrap.content {
+  background-color: #fff;
+  font-family: 'Arial', 'Helvetica', sans-serif;
+  padding-top: 0.5em;
+}
+
+/* Page Footer */
 
 .foot {
   background-color: #f5f5f5;
+  color: #777;
   padding-bottom: 24px;
 }
 
-.head {
-  padding-bottom: 30px;
+.footer-line {
+	margin: 0 10px 10px 10px;
 }
 
-.right {
-  font-size: .8125em;
-}
-
-.close {
-  text-align: right;
-}
-
-.right ul {
-  padding-left: 1em;
-}
-
-.right ul li {
-  padding-bottom: 6px;
+.container.close {
+	text-align: right; 
+	color: #848484;
+	padding: 30px 0;
 }
 
 @media print {
@@ -473,4 +600,325 @@ body {
 /* IE Max-width hack */
 #container,#footer {
   width: expression(document.body.clientWidth<742?"740px":document.body.clientWidth>1202?"1200px":"auto");
+}
+
+/**************************************************************************************************************
+ * 
+ * MEDIA QUERIES
+ *
+**************************************************************************************************************/
+
+/** 
+ * This is around iPhone (portrait) size.
+ * Let's make the donation-amount fields inline.
+ */
+
+@media all and (min-width: 361px) {
+	.form-item,
+	.expiration-date-wrapper {
+		max-width: 650px;
+	}
+}
+
+@media all and (min-width: 479px) {
+	
+	/* Donation Webform */
+	
+	#webform-component-donation--amount {
+		float: left;
+		width: 83%;
+		max-width: 370px;
+	}
+	
+	#webform-component-donation--amount .form-item {
+		float: left; 
+		clear: none;
+		width: 14.25%;
+	}
+	
+	#webform-component-donation--amount .form-radio,
+	#webform-component-donation--amount label {
+		display: block;
+	}
+	
+	#webform-component-donation--other-amount {
+		padding-top: 18px;
+		margin-left: -15px;
+		width: 15%;
+		float: left;
+		clear: none;
+	}
+	
+	#webform-component-payment-options {
+		margin-top: -27px;
+	}
+	
+	#webform-component-billing-information {
+		margin-bottom: 1.5em;
+	}
+	
+	.webform-container-inline label,
+	.fundraiser-payment-fields label {
+		float: left;
+		width: 35%;
+		margin-right: 0;
+	}
+	
+	.webform-container-inline input.form-text,
+	.webform-container-inline select,
+	.fundraiser-payment-fields input {
+		float: left;
+		max-width: 60%;
+	}
+	
+	.fundraiser_submit_message {
+		float: right;
+		width: 51%;
+		padding-top: 0.5em;
+	}
+	
+}
+
+/**
+ * At 600px, change the header configuration (num. of columns, etc.)
+ * and change the percentage widths for the grid items.
+ */
+
+@media all and (min-width: 600px) {
+	
+	/* Page header */
+	
+	#logo-top {
+		width: 22%;
+		margin: 15px 2% 0 0;
+	}
+	
+	#header_right {
+		padding-top: 28px;
+	}
+	
+	#donation-message {
+		border-top: none;
+		padding-top: 0;
+		padding-left: 7px;
+	}
+	
+	/* Content area */
+	
+	#ratings_from {
+		padding-bottom: 1em;
+		border-bottom: 1px dotted #ccc;
+		margin-bottom: 1em;
+	}
+	
+	/* Donation Webform */
+	
+	.webform-client-form {
+		max-width: 665px;
+	}
+	
+	.form-item-submitted-billing-information-payment-fields-credit-card-cvv .description {
+		float: left;
+		display: block;
+	}
+	
+	#edit-submitted-billing-information-payment-fields-credit .description,
+	.webform-container-inline .description {
+		float: left;
+		margin-top: -12px;
+	}
+	
+	.fundraiser_submit_message {
+		width: 61%;
+	}
+	
+	/* Grid elements */
+	
+	.grid-1,
+	.grid-2,
+	.grid-3 {
+		width: 25%;
+	}
+	
+	.grid-4 {
+	  width: 33.33333%;
+	}
+	
+	.grid-5,
+	.grid-6 {
+		width: 50%;
+	}
+	
+	.grid-7,
+	.grid-8 {
+		width: 66.6%;
+	}
+	
+	.grid-9,
+	.grid-10,
+	.grid-11,
+	.grid-12 {
+	  width: 100%;
+	}
+}
+
+/**
+ * At 670px, divide the form columns, since there's enough room now.
+ */
+
+@media all and (min-width: 670px) {
+	#webform-component-billing-information--address-line-2 label {
+		visibility: hidden;
+	}
+	
+	#edit-submitted-billing-information-payment-fields-credit {
+		height: 0;
+	}
+	
+	.form-item,
+	.expiration-date-wrapper {
+		clear: none;
+	}
+	
+	#webform-component-billing-information > .fieldset-wrapper > .form-item,
+	#webform-component-billing-information #zone-select-wrapper,
+	#edit-submitted-billing-information-payment-fields-credit > .fieldset-wrapper > .form-item,
+	.expiration-date-wrapper {
+		float: left;
+		width: 44%;
+		margin-right: 6%;
+	}
+	
+	.form-item-submitted-billing-information-payment-fields-credit-card-cvv label,
+	.form-item-submitted-billing-information-payment-fields-credit-card-number label {
+		width: 45%;
+	}
+}
+
+/**
+ * At 700px, give a max-width to the page content 
+ * and move the 'ratings from...' area too  the right.
+ */
+
+@media all and (min-width: 700px) {
+	
+	/* Page content */
+	
+	.gridwrap.content .inner {
+		max-width: 740px;
+	}
+	
+	#ratings_from {
+		float: right;
+		max-width: 230px;
+		margin: 0 0 10px 10px;
+		border-bottom: none;
+	}
+}
+
+@media all and (min-width: 767px) {
+	h1 {
+		font-size: 2em;
+	}
+	
+	#donation-message h1 {
+		width: 96%;
+		margin-right: 4%;
+	}
+	
+	#logo-top {
+		width: auto;
+		margin-right: 1.5%;
+	}
+	
+	/* Page elements */
+	
+	.gridwrap.content .inner {
+		margin: 0 auto;
+	}
+	
+}
+
+/**
+ * At 950px, we assume 'desktop size', essentially.
+ * Give each grid item its own percentage width (no more grouping).
+ */
+
+@media all and (min-width: 950px) {
+	h1 {
+		font-size: 2.75em;
+	}
+	
+	/* Page header */
+	
+	.head {
+		margin-top: 30px;
+  }
+	
+	#donation-message {
+		font-size: 1.083333em;
+		width: 55%;
+	}
+	
+	/* Page elements */
+	
+	.gridwrap.content .inner {
+		width: 78%;
+		float: right;
+		margin: 0 13px;
+	}
+	
+	.footer-line {
+		margin: 0;
+	}
+	
+	/* Grid Elements */
+	
+	.grid-1 {
+	  width: 8.33333%;
+	}
+	
+	.grid-2 {
+	  width: 16.666666%;
+	}
+	
+	.grid-3 {
+	  width: 25%;
+	}
+	
+	.grid-4 {
+	  width: 33.3333%;
+	}
+	
+	.grid-5 {
+	  width: 41.66666%;
+	}
+	
+	.grid-6 {
+	  width: 50%;
+	}
+	
+	.grid-7 {
+	  width: 58.33333%;
+	}
+	
+	.grid-8 {
+	  width: 66.66666%;
+	}
+	
+	.grid-9 {
+	  width: 75%;
+	}
+	
+	.grid-10 {
+	  width: 83.33333%;
+	}
+	
+	.grid-11 {
+	  width: 91.666666%;
+	}
+	
+	.grid-12 {
+	  width: 100%;
+	}
 }
