--- a/bling_nateeanes/donation-layout.css
+++ b/bling_nateeanes/donation-layout.css
@@ -1,8 +1,6 @@
 
-/**************************************************************************************************************
- *
+/**********************************************************************************************************//**
  * GENERAL (BASELINE) STYLES
- *
 **************************************************************************************************************/
 
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video {
@@ -101,10 +99,8 @@ pre {
 /* IE */
 }
 
-/**************************************************************************************************************
- *
+/**********************************************************************************************************//**
  * TEXT ELEMENTS & LINKS
- *
 **************************************************************************************************************/
 
 /* Headers */
@@ -176,10 +172,8 @@ a:link {
   -webkit-tap-highlight-color: #FF5E99;
 }
 
-/**************************************************************************************************************
- *
+/**********************************************************************************************************//**
  * FORM ELEMENTS
- *
 **************************************************************************************************************/
 
 fieldset {
@@ -356,10 +350,8 @@ button {
 	margin-right: 10px;
 }
 
-/***************************************************************************************************************
- *
+/**********************************************************************************************************//**
  * HELPERS (INCL. CLEARFIX, ETC.)
- *
 ***************************************************************************************************************/
 
 /* for image replacement */
@@ -408,11 +400,9 @@ blockquote:before,blockquote:after,q:before,q:after {
   content: none;
 }
 
-/***************************************************************************************************************
- *
+/**********************************************************************************************************//**
  * PRIMARY STYLES & GRID ELEMENTS
  * Author: Luke Connolly
- *
 ***************************************************************************************************************/
 
 /*###########
@@ -475,10 +465,8 @@ blockquote:before,blockquote:after,q:before,q:after {
 
 
 
-/**************************************************************************************************************
- *
+/**********************************************************************************************************//**
  * PAGE ELEMENT STYLES
- *
 **************************************************************************************************************/
 
 /* Body */
@@ -611,17 +599,14 @@ body {
   width: expression(document.body.clientWidth<742?"740px":document.body.clientWidth>1202?"1200px":"auto");
 }
 
-/**************************************************************************************************************
- * 
+/**********************************************************************************************************//**
  * MEDIA QUERIES
- *
 **************************************************************************************************************/
 
 /** 
  * This is around iPhone (portrait) size.
  * Let's make the donation-amount fields inline.
  */
-
 @media all and (min-width: 361px) {
 	.form-item,
 	.expiration-date-wrapper {
@@ -693,7 +678,6 @@ body {
  * At 600px, change the header configuration (num. of columns, etc.)
  * and change the percentage widths for the grid items.
  */
-
 @media all and (min-width: 600px) {
 	
 	/* Page header */
@@ -767,12 +751,10 @@ body {
 /**
  * At 670px, divide the form columns, since there's enough room now.
  */
-
 @media all and (min-width: 670px) {
 	#webform-component-billing-information--address-line-2 label {
 		visibility: hidden;
 	}
-	
 	#edit-submitted-billing-information-payment-fields-credit {
 		height: 0;
 	}
@@ -801,7 +783,6 @@ body {
  * At 700px, give a max-width to the page content 
  * and move the 'ratings from...' area too  the right.
  */
-
 @media all and (min-width: 700px) {
 	
 	/* Page content */
@@ -818,6 +799,11 @@ body {
 	}
 }
 
+/**
+ * This is the iPad (portrait) size.
+ * In this resolution, we enlarge the h1 and adjust a few items such
+ * as the header, and center the main column containing the form.
+ */
 @media all and (min-width: 767px) {
 	h1 {
 		font-size: 2em;
@@ -825,7 +811,6 @@ body {
 	
 	#donation-message h1 {
 		width: 96%;
-		margin-right: 4%;
 	}
 	
 	#logo-top {
@@ -845,7 +830,6 @@ body {
  * At 950px, we assume 'desktop size', essentially.
  * Give each grid item its own percentage width (no more grouping).
  */
-
 @media all and (min-width: 950px) {
 	h1 {
 		font-size: 2.75em;
@@ -855,7 +839,7 @@ body {
 	
 	.head {
 		margin-top: 30px;
-  }
+	}
 	
 	#donation-message {
 		font-size: 1.083333em;
@@ -875,7 +859,7 @@ body {
 		margin: 0;
 	}
 	
-	/* Webform */
+	/* Donation Webform */
 	
 	#webform-component-billing-information > .fieldset-wrapper > .form-item,
 	#webform-component-billing-information #zone-select-wrapper,
